# whisper

./: .gitignore  Dockerfile  docker-compose.yml
whisper-server/: Cargo.toml
whisper-server/src/: main.rs
